@@ -1,5 +1,11 @@
 Post-v3.4.0
 --------------------
+   - The limit on the number of fields for address prefix tracking in flow
+     tables increased from 3 to 4.  For example, it is now possible to
+     specify both IPv4 and IPv6 address fields at the same time:
+      $ ovs-vsctl set Bridge br0 flow_tables:0=@N -- \
+          --id=@N create Flow_Table \
+                    name=table0 prefixes=nw_dst,nw_src,ipv6_dst,ipv6_src
    - Userspace datapath:
      * The default zone limit, if set, is now inherited by any zone
        that does not have a specific value defined, rather than being
